# acrobot

./: .gitattributes  .gitignore  .gitmodules  README.md  acrobot.slx  acrobot_sim.slx  acrobot_sim.slx.original  acrobot_sim_Robot_Controller_Acrobot_Walker_report.htmx  acrobot_sim_noise.slx  create_motors.m  experiment.m  imu_library.slx  main.m  main_sim.m  motor.m  motor_specs.m  replay.m  robot.slx  robotParameters.m  startup.m
+acrobot/: acrobot.m  acrobot_anim.m  acrobot_control.m  acrobot_state_estimator.m  acrobot_state_estimator_helper.m  acrobot_torque_control.m  acrobot_torque_in.m  acrobot_torque_out.m  acrobot_walker.m  curve.m
+acrobot/+gen/: calc_B.m  calc_B.prj  calc_C.m  calc_D.m  calc_De.m  calc_E.m  calc_EE.m  calc_J.m  calc_P.m  calc_dUde.m  calc_qd.m  calc_rend.m  lib_calc_B.prj
acrobot_description/: CMakeLists.txt  package.xml
acrobot_description/launch/: acrobot.launch
acrobot_description/meshes/: large_leg_1.stl  large_leg_1.x3g  large_leg_2.stl  large_leg_2.x3g  leg1.stl  leg2.stl  small_leg_1.stl  small_leg_1.x3g  small_leg_2.fpp  small_leg_2.stl  small_leg_2.x3g
acrobot_description/models/: acrobot.urdf  acrobot.xacro  acrobot_simple.urdf  acrobot_simple.xacro
acrobot_description/rviz/: acrobot.rviz
data/: curve_parameters.mat
data/tests/: test_03-12-2020 18-10.mat  test_03-12-2020 18-12.mat  test_03-12-2020 18-13.mat  test_03-12-2020 18-29.mat  test_03-12-2020 18-30.mat  test_03-12-2020 18-47.mat  test_03-12-2020 18-51.mat  test_03-12-2020 19-07.mat  test_03-12-2020 19-08.mat  test_03-12-2020 19-33.mat  test_03-12-2020 19-34.mat  test_03-12-2020 19-35.mat  test_03-12-2020 19-42.mat  test_03-12-2020 19-49.mat  test_03-12-2020 19-50.mat  test_03-12-2020 19-51.mat  test_03-12-2020 19-52.mat  test_03-12-2020 19-57.mat  test_03-12-2020 19-59.mat  test_03-12-2020 20-03.mat  test_03-12-2020 20-15.mat  test_03-12-2020 20-51.mat  test_03-12-2020 21-54.mat  test_03-12-2020 21-57.mat  test_03-12-2020 21-59.mat  test_03-12-2020 22-02.mat  test_03-12-2020 22-04.mat  test_03-12-2020 22-06.mat  test_03-12-2020 22-39.mat  test_03-12-2020 22-40.mat  test_03-12-2020 22-43.mat  (+408 more)
figures/: curve.fig  curve_test.fig  pid.fig  speed_graph.fig  test.fig  test_acc.fig
measurements/: demo.m  estimator.m  measure_encoder.m  measure_friction.m  measure_imu.m  measure_motor_angle.m  measure_speed.m  measure_torque_values.m  pid_controller.m  tune_pid.m
reference/: M_V_numeric_sys.m  M_V_sys.m  README_acrobot_capstone.txt  acrobot.m  acrobot_impact_map.m  acrobot_main.m  acrobot_symbolic.m  animate_acrobot_VHC.m  compute_h_line.m  compute_v_w_angles.m  impact_event.m  load_acrobot_params.m  plot_acrobot.m  q_b_intersect_event.m  reduced_dyn.m  theta_impact_event.m
src/: CMakeLists.txt  plot_acrobot.m
src/acrobot/: CMakeLists.txt  acrobot.ino
(+4 files in other folders)
